@@ -2,6 +2,8 @@
 
     * las/arch/x86_64/main.c: Added the BSR instruction
 
+    * las/arch/x86_64/main.c: Added the BSWAP instruction
+
 
 2013-12-06  Hirochika Asai  <asai@scyphus.co.jp>
 
